force-app/main/default/objects/Application__c/fields/Disbursal_Author_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Author_Completion_Date__c</fullName>
    <label>Disbursal Author Completion Date</label>
    <type>Date</type>
</CustomField>