force-app/main/default/objects/Application__c/fields/Disbursal_Maker_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Maker_Completion_Date__c</fullName>
    <label>Disbursal Maker Completion Date</label>
    <type>Date</type>
</CustomField>