force-app/main/default/objects/Application__c/fields/FIV_B_User__c.field-meta.xml
<CustomField>
    <fullName>FIV_B_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIV-B User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications6</relationshipName>
    <type>Lookup</type>
</CustomField>