force-app/main/default/objects/Application__c/fields/FIV_C_User__c.field-meta.xml
<CustomField>
    <fullName>FIV_C_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIV-C User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications5</relationshipName>
    <type>Lookup</type>
</CustomField>