force-app/main/default/objects/Application__c/fields/Legal_Approval_User__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Approval User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications8</relationshipName>
    <type>Lookup</type>
</CustomField>