force-app/main/default/objects/Application__c/fields/Legal_Opinion_User__c.field-meta.xml
<CustomField>
    <fullName>Legal_Opinion_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Opinion User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications9</relationshipName>
    <type>Lookup</type>
</CustomField>