force-app/main/default/objects/Application__c/fields/Online_EC_User__c.field-meta.xml
<CustomField>
    <fullName>Online_EC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online EC User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications7</relationshipName>
    <type>Lookup</type>
</CustomField>