force-app/main/default/objects/Application__c/listViews/Work_to_Pull_Application.listView-meta.xml
<ListView>
    <fullName>Work_to_Pull_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Work to Pull</label>
    <queue>Work_to_Pull</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>